test/cli/test-mutating-policy/mutate-custom-crd/patched-widget.yaml
apiVersion: example.com/v1
kind: Widget
metadata:
  name: my-widget
  namespace: test-namespace
  annotations:
    testing: "true"
spec:
  color: blue
