test/cli/test-mutating-policy/mutate-custom-crd/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterResources:
- clusterresources.yaml
kind: Test
metadata:
  name: test-set-annotations-for-widget
policies:
- policy.yaml
resources:
- widget.yaml
results:
- isMutatingPolicy: true
  kind: Widget
  patchedResources: patched-widget.yaml
  policy: set-annotations-for-widget
  resources:
  - test-namespace/my-widget
  result: pass
